deployment/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sk-review
  annotations:
    nginx.ingress.kubernetes.io/enable-global-auth: false
    nginx.org/location-snippets:
    nginx.org/server-snippets:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/affinity: 'cookie'
    nginx.org/sticky-cookie-services: "serviceName=sk-review http-cookie expires=172800s"
    nginx.ingress.kubernetes.io/session-cookie-name: 'http-cookie'
    nginx.ingress.kubernetes.io/session-cookie-expires: '172800'
    nginx.ingress.kubernetes.io/session-cookie-max-age: '172800'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.org/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    nginx.org/proxy-send-timeout: '3600'
spec:
  ingressClassName: nginx
  tls:
    - secretName: sk-review-certificate
      hosts:
        - sk-review.p.niva.no
  rules:
  - host: sk-review.p.niva.no
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: sk-review
            port:
              name: http
